--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "letitsnow",
   "version": "1.0.0",
   "description": "my first app.",
-  "main": "index.js",
+  "engines": {
+    "node": "6.2.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +16,8 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
     "normalize.css": "^4.2.0"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
